--- a/public/wp-content/themes/pizzaria/style.css
+++ b/public/wp-content/themes/pizzaria/style.css
@@ -33,9 +33,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+
 }
 
-.site-nav-menu li{
+.site-nav-menu > li{
+    text-align: center;
     flex-grow: 1;
 }
 
